<resources>
    <string name="app_name">体温监测</string>
    <string name="network_error">网络错误！</string>
    <string name="download_error">导出失败！</string>
    <string name="exit_confirm">再按一次退出</string>
    <string name="action_meanu_refresh_des">刷新</string>
    <string name="action_meanu_download_des">下载最近十五天体温数据</string>

    <!-- Strings related to login -->
    <string name="prompt_account">请输入用户名</string>
    <string name="prompt_password">请输入密码</string>
    <string name="action_sign_in">登录</string>
    <string name="welcome">欢迎！</string>
    <string name="invalid_username">用户名为10位，由数字、字母或下划线、点组成</string>
    <string name="invalid_password">密码为6位纯数字</string>
    <string name="login_failed">用户名或密码错误！</string>
    <string name="app_name_chinese">居民体温监测系统</string>

    <!-- 导航菜单 -->
    <string name="nav_resident">居民信息</string>
    <string name="nav_temp_info">体温监测信息</string>
    <string name="nav_statistcs">统计数据</string>
    <string name="nav_logout">退出</string>
    <string name="nav_admin_name_prefix">你好，</string>
    <string name="nav_admin_phone_prefix">TEL：</string>
    <string name="nav_admin_phone_default">TEL：1234567890</string>
    <string name="nav_admin_name_default">你好，管理员</string>

    <!-- 体温监测fragment -->
    <string name="frag_temp_image_des">体温监控中......</string>
    <string name="frag_temp_load_failed">加载失败</string>
    <string name="frag_temp_empty">当前没有数据</string>

    <!-- 居民信息fragment -->
    <string name="frag_resident_des">这是居民信息</string>
    <string name="frag_resident_search_empty">没有搜索到东西，请换个关键词试试</string>
    <string name="frag_resident_search_building">楼号:</string>
    <string name="frag_resident_search_entrance">单元号:</string>
    <string name="frag_resident_search_room">房间号:</string>
    <string name="frag_resident_search_page">页码:</string>
    <string-array name="frag_resident_building">
        <item>#</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
    </string-array>
    <string-array name="frag_resident_entrance">
        <item>#</item>
        <item>01</item>
        <item>02</item>
    </string-array>
    <string-array name="frag_resident_room">
        <item>#</item>
        <item>101</item>
        <item>102</item>
        <item>201</item>
        <item>202</item>
        <item>301</item>
        <item>302</item>
        <item>401</item>
        <item>402</item>
        <item>501</item>
        <item>502</item>
        <item>601</item>
        <item>602</item>
    </string-array>
    <string-array name="frag_resident_page">
        <item>1</item>
    </string-array>

    <!-- 统计数据fragment -->
    <string name="frag_statistcs_unnormal">体温异常人次：</string>
    <string name="frag_statistcs_total">共检测人次：</string>
    <string name="frag_statistcs_chart_total">共检测人次变化折线图</string>
    <string name="frag_statistcs_duration">时间：</string>
    <string name="frag_statistcs_chart_unnormal">体温异常人次变化折线图</string>
    <string-array name="frag_statistcs_duration">
        <item>24小时内</item>
        <item>三天内</item>
        <item>七天内</item>
        <item>15天内</item>
    </string-array>

</resources>