<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/colorGray"
             tools:context=".ui.main.StatistcsFragment">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="5dp"
            android:layout_gravity="start"
            android:orientation="horizontal">

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/frag_statistcs_total"
                  android:layout_gravity="end"
                  android:layout_marginEnd="2dp"/>

        <TextView
                android:id="@+id/text_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="end"
                android:gravity="center"
                android:background="@drawable/spinner"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/frag_statistcs_unnormal"
                  android:layout_marginEnd="2dp"
                  android:layout_marginStart="10dp"
                  android:gravity="end"/>

        <TextView
                android:id="@+id/text_unnormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="end"
                android:gravity="center"
                android:background="@drawable/spinner"/>

    </LinearLayout>

    <TextView android:layout_width="match_parent"
              android:layout_height="2dp"
              android:layout_gravity="start"
              android:layout_marginEnd="2dp"
              android:layout_marginTop="33dp"
              android:background="@drawable/spinner"
              android:gravity="center"/>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical"
                  android:layout_marginTop="45dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_gravity="end"
                android:orientation="horizontal">

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_weight="3"
                      android:text="@string/frag_statistcs_chart_unnormal"
                      android:layout_gravity="start"
                      android:layout_marginEnd="2dp"
                      android:gravity="center"/>

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_weight="0.5"
                      android:text="@string/frag_statistcs_duration"
                      android:layout_gravity="end"
                      android:layout_marginEnd="2dp"
                      android:gravity="end"/>

            <Spinner
                    android:id="@+id/spinner_duration_unnormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="end"
                    android:background="@drawable/spinner"/>

        </LinearLayout>


        <com.github.mikephil.charting.charts.LineChart
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/chart"
                android:id="@+id/line_chart_unnormal"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="5dp"
                android:layout_gravity="end"
                android:orientation="horizontal">

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_weight="3"
                      android:text="@string/frag_statistcs_chart_total"
                      android:layout_gravity="start"
                      android:layout_marginEnd="2dp"
                      android:gravity="center"/>

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_weight="0.5"
                      android:text="@string/frag_statistcs_duration"
                      android:layout_gravity="end"
                      android:layout_marginEnd="2dp"
                      android:gravity="end"/>

            <Spinner
                    android:id="@+id/spinner_duration_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="end"
                    android:background="@drawable/spinner"/>

        </LinearLayout>

        <com.github.mikephil.charting.charts.LineChart
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="@drawable/chart"
                android:id="@+id/line_chart_total"/>

    </LinearLayout>


    <ProgressBar
            android:id="@+id/loading_total"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="180dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintStart_toStartOf="@+id/password"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3"/>

    <ProgressBar
            android:id="@+id/loading_unnormal"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginTop="265dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="64dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintStart_toStartOf="@+id/password"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3"/>

</FrameLayout>